Change css to solve bug on mobile?

--- a/css/style.scss
+++ b/css/style.scss
@@ -90,6 +90,7 @@ font-family: 'Lato', sans-serif;
 
 .inset {
   padding: 20px;
+  padding-right: 40px;
 }
 
 .flex-video {
